# m3tacron

./: .env.example  .gitignore  .gitmodules  500_error_response.html  AGENTS.md  CACHING.md  CONTRIBUTING.md  LICENSE  MISSION.md  PERFORMANCE_PROTOCOL.md  README.md  REFACTOR_GUIDE.md  URLS.txt  alembic.ini  analysis_log.txt  analyze_results.py  backend_out.txt  batch_worker.py  branches.txt  check_dates.py  check_db_and_seed.py  check_imports.py  check_log.txt  check_log_2.txt  check_log_3.txt  check_log_6.txt  check_log_7.txt  clean_db.py  cloud-beta.yml  cloud-prod.yml  codemap.md  commit_message.json  comparison_output.txt  debug_error.txt  debug_error_10.txt  debug_error_11.txt  debug_error_12.txt  debug_error_13.txt  debug_error_14.txt  debug_error_15.txt  (+148 more)
.devcontainer/: devcontainer-lock.json  devcontainer.json
.slim/: codemap.json
assets/: global.css
backend/: Dockerfile  cache.py  codemap.md  database.py  main.py  models.py  pytest_output.txt  test_api.py  test_snapshot.py
frontend/: Dockerfile  Dockerfile.dev  Dockerfile.local  README.md  build_log.txt  check.txt  check2.txt  codemap.md  frontend_err.txt  frontend_out.txt  lint_log.txt  next.config.ts  package-lock.json  package.json  svelte.config.js  svelte.config.local.js  svelte_err.txt  svelte_log.txt  svelte_out.txt  tsc2.txt  tsconfig.tsbuildinfo  vite.config.js
m3tacron/: debug_data.py  debug_output_reset.txt  debug_upgrade_json.py  error.txt  full_log_3.txt  m3tacron.py  search_results.txt  startup_log_5.txt  startup_log_6.txt  startup_log_7.txt  theme.py
playwright/: test-heavy-pages.spec.ts
(+688 files in other folders)
