[project]
name = "m3tacron"
version = "1.0.0"
description = "M3taCron - X-Wing Miniatures competitive data aggregator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.14",
    "httpx>=0.28.0",
    "playwright>=1.40.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "performance: marks tests as performance benchmarks (deselect with '-m \"not performance\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pytest-benchmark]
min_rounds = 5
max_time = 1.0
warmup = true
warmup_iterations = 1
histogram_min = 0.0
histogram_max = 100.0
